public/javascripts/SVValidate/css/svv-modal.css
#modal-mission-holder {
    position: absolute;
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    text-align: justify;
    visibility: hidden;
}

#modal-mission-background {
    position: absolute;
    left: 0px;
    top: 0;
    background: rgba(255, 255, 255, 0.5);
    visibility: hidden;
    height: 100%;
    width: 110%;
}

#modal-mission-foreground {
    padding: 100px 20px 10px 20px;
    visibility: hidden;
}

.modal-foreground {
    top: 75px;
    left: 0;
    right: 0;
    padding: 10px;
    height: 560px;
    background: rgba(255, 255, 255, 1);
    color: rgba(80, 80, 80, 1);
    font-size: 14pt;
    position: absolute;
    min-height: 480px;
    border: 5px solid black;

    border-radius: 3px 3px 3px 3px;
    z-index: 4;
    -webkit-border-radius: 3px 3px 3px 3px;
    -moz-border-radius: 3px 3px 3px 3px;
}

.modal-foreground .button {
    width: 100%;
}

.modal-background {
    position: absolute;
    left: -60px;
    top: 0;
    background: rgba(255, 255, 255, 0.5);
    height: 100%;
    width: 110%;
}

#modal-mission-close-button {
    font-size: 24px;
    width: 40%;
    margin-right: 30%;
    margin-left: 30%;
    margin-top: 30px;
    float: right;
}

#modal-mission-instruction {
    text-align: center;
}

#modal-comment-background, #modal-mission-background {
    position: absolute;
    left: 0px;
    top: 0;
    background: rgba(255, 255, 255, 0.5);
    visibility: hidden;
    height: 100%;
    width: 110%;
}

#modal-mission-complete-holder {
    visibility: hidden;
}

#modal-mission-complete-foreground {
    visibility: hidden;
    top: 36px;
}

#modal-mission-complete-title {
    margin-top: 70px;
    text-align: center;
}

#modal-mission-complete-message {
    text-align: center;
}

#modal-mission-complete-table {
    height: 190px;
    padding-left: 175px;
}

.modal-foreground .btn-primary {
    color: white;
    background: #3182bd;
    cursor: pointer;
    border: 1px solid transparent;
    font-size: 14pt;
    opacity: 1.0;
}

.modal-foreground .btn-secondary {
    color: black;
    background: white;
    cursor: pointer;
    border: 1px solid black;
    font-size: 14pt;
    opacity: 1.0;
}

.modal-foreground .btn-loading {
    color: white;
    background: #7f7f7f;
    cursor: wait;
    border: 1px solid transparent;
    font-size: 14pt;
    opacity: 0.35;
}

.modal-foreground .blue-btn:focus {
    outline: none;
}

